# npc_sessions

./: .gitignore  DRpilot_666986_20230814.json  README.md  acquisition.json  dynamic_routing_qc.ipynb  example_acquisition.json  plot_nwb_zarrio.py  pyproject.toml  read_test.py  requirements.txt  session.json  session_to_insertions.json  sessions.json  testzarr.py  video_test.py  write_test.py
.github/workflows/: cache_ephys.yml  cache_sessions.yml  cache_training.yml  publish.yml  qc-notebooks.yml  qc_notebooks.yml
.scratch/: make_trials_table.py
notebooks/: audio_latency.ipynb  dynamic_routing_qc.ipynb  example-usage.ipynb  extra-video-frames.html  extra-video-frames.ipynb  opto.ipynb  qc.ipynb  session_browser.ipynb  task_behavior.ipynb  units_spikes_quickstart.ipynb
sample_aind_metadata/: acquisition_676909_2023-12-13.json  data_description_676909_2023-12-13.json  instrument_676909_2023-12-13.json  make_sample_metadata.py
scripts/: generate_stim_files_table.py
src/npc_sessions/: __init__.py  _dynamicrouting.py  available_sessions.py  config.py  nwb.py  parse_settings_xml.py  parsing.py  records.py  session.py  session_browser.ipynb  sessions.py  tracked_sessions.py  tracked_sessions.yaml  types.py  utils.py  widgets.py
src/npc_sessions/aind_data_schema/: __init__.py  acquisition.py  data_description.py  instrument.py  old_rig.py
src/npc_sessions/basic/: __init__.py  session.py  sessions.csv  sync.py  tables.py
src/npc_sessions/components/: ephys_utils.py  parse_settings_xml.py  sync_dataset.py
src/npc_sessions/db/: __init__.py  sqlite.py  types.py
src/npc_sessions/notebooks/: README.md  __init__.py  dynamic_routing_qc.ipynb  qc.py
src/npc_sessions/nwb/: __init__.py  modules.py
src/npc_sessions/plots/: __init__.py  audio.py  behavior.py  plot_utils.py  spikes.py  sync.py  timing.py  video.py
src/npc_sessions/project/: __init__.py  dynamicrouting.py
src/npc_sessions/qc/notebooks/: dynamic_routing_qc.ipynb  units_spikes_quickstart.ipynb
src/npc_sessions/scripts/: README.md  update_nwb_db.py  utils.py  write_dataframes.py  write_notebooks.py  write_nwb.py  write_sessions_to_cache.py  write_sessions_to_nwb.py
src/npc_sessions/scripts/onsite-only/: update_nwb_db.py
src/npc_sessions/tools/: ephys_utils.py  file_io.py  openephys.py  parse_settings_xml.py  sync_dataset.py
src/npc_sessions/trials/: README.md  __init__.py  property_dict.py
src/npc_sessions/trials/TaskControl/: DynamicRouting1.py  LuminanceTest.py  OptoTagging.py  RFMapping.py  __init__.py
src/npc_sessions/utils/: __init__.py  barcodes.py  cache.py  electrodes.py  file_io.py  intervals.py  misc.py  mvr.py  newscale.py  openephys.py  running.py  settings_xml.py  spikeinterface.py  stim.py  sync.py  units.py  videos.py
tests/: test_aind_metadata.py  test_surface_recording.py  test_task_trials.py
